--- a/tracker-app/public/index.html
+++ b/tracker-app/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>시선 & 마우스 추적 데모</title>
+    <!--
+      TFFacemesh를 사용하기 위한 관련 스크립트 파일을 로드
+    -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection@0.0.1/dist/face-landmarks-detection.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
