--- a/tracker-app/public/index.html
+++ b/tracker-app/public/index.html
@@ -34,6 +34,13 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- WebGazer 관련 필수 엘리먼트 -->
+    <video id="webgazerVideoFeed" autoplay playsinline muted></video>
+    <canvas id="webgazerVideoCanvas"></canvas>
+    <canvas id="webgazerFaceOverlay"></canvas>
+    <canvas id="webgazerFaceFeedbackBox"></canvas>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
